# soakue

./: .gitignore  .gitmodules  Cargo.toml  events.js  fonts.css  helper.js  index.html  iosevka.css  list.html  noto.css  opensearch.xml  style.css  style2.css  worker.js
.github/workflows/: noto.yml  the.yml
css/: iosevka.css  noto.css  style.css
data/: all.txt  chars.txt  guesses.txt  nb_export.tsv  readable.txt  time.txt  toadua_types.txt
src/: dedup.rs  guess_metadata.rs  letters.rs  main.rs  old_main.rs  tests.rs  toadua.rs  toakao.rs
