[package]
name = "soakue"
version = "0.1.0"
edition = "2021"

[dependencies]
humantime = "2.1.0"
indexmap = "2.12.1"
itertools = "0.13.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
unicode-normalization = "0.1.24"
